# neuro-visual-training-minigames

./: .dockerignore  .gitignore  AGENTS.md  README.md  SPEC.md  docker-compose.yml  index.html  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20260528190000_initial_schema.sql  20260528203000_add_history_client_id.sql
backend/src/: main.rs
docs/: data-sync.md
frontend/: Dockerfile  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts  styles.css  vite-env.d.ts
frontend/src/api/: cloudSync.ts
frontend/src/components/: AccountNav.vue  AccountPanel.vue  AppSidebar.vue  GameCard.vue  PhaserGame.vue  PreviewMark.vue
frontend/src/data/: minigames.ts
frontend/src/game/: main.ts  settings.ts
frontend/src/history/: playHistory.ts
frontend/src/minigames/: findMinigame.ts  registry.ts
frontend/src/presets/: presetStore.ts  useStoredPresets.ts
frontend/src/stores/: accountStore.ts  gameSettingsStore.ts  historyStore.ts
frontend/src/sync/: localProfiles.ts  useCloudSync.ts
frontend/src/types/: primeuix-themes.d.ts
frontend/src/views/: AuthView.vue  (+4 more)
src/: App.vue  main.ts  router.ts  styles.css
src/components/: GameCard.vue  PhaserGame.vue  PreviewMark.vue
src/data/: minigames.ts
src/game/: EventBus.ts  inputKeys.ts  main.ts
src/minigames/: keyOptions.ts  registry.ts  types.ts
src/presets/: presetStore.ts
src/stores/: gameSettingsStore.ts  historyStore.ts
src/views/: HistoryView.vue  SetupView.vue
(+9 files in other folders)
