[package]
name = "neuro-visual-training-api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["chrono", "json", "migrate", "postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1", features = ["serde", "v4"] }
